h1. Ripple Release Notes

h2. 2.0.0 Major Release

This moves Ripple forward to support Rails 4.1, and drops support for a lot of functionality not used by Spreedly (search, observers, etc.)

h2. 0.9.5 Patch Release - 2011-06-14

Release 0.9.5 is a minor bugfix release but also includes some small features.

Full notes:

* Allow IO-like objects to be used as RObject data. [Josh Nichols]
* Set the content-length or transfer-encoding appropriately for Net::HTTP. Fixes #162.
* Fix MapReduce jobs on PBC when keep=false on certain phases. [Alexander Lang]
* Invalidate the key-cache for a bucket when streaming.
* Pass options through Document#all to Bucket#keys.
* Make Hash#to_param compatible with ActiveSupport. [Dave Perrett]
* Add support for previous_changes functionality and make available to callbacks. [Nathaniel Talbott, Sean Cribbs

h2. 0.9.4 Patch Release - 2011-05-10

Release 0.9.4 is a minor bugfix release.

Full notes:

* Allow global JSON options to be set so that deeply nested objects can be serialized.
* Set TCP_NODELAY on PBC sockets and send messages in a single write to reduce latency. [Technorama, Dan Hodge]
* X510 should be X509 in OpenSSL. [Adam Hunter]

h2. 0.9.3 Patch Release - 2011-04-18

Release 0.9.3 is a minor bugfix release.

Full notes:

* Make YAML serialization spec immune to engine differences. [Jeff Pollard]
* Key-streaming over HTTP are immune to JSON objects that cross chunk boundaries.
* Require 'yaml' so we can read the config file.
* Require 'erb' so we can eval the config. [Myron Marston]
* Move definition of validates_associated back into the validator. [Myron Marston]
* Require 'set' before Set is extended. [André Silva]

h2. 0.9.2 Patch Release - 2011-04-11

Release 0.9.2 is a minor bugfix release.

Full notes:

* Remove usage of autoload from all projects to reduce thread-safety problems.
* Fix Excon backend to properly initialize response headers under error conditions. [Jeff Pollard, Myron Marston]