@@ -7,11 +7,5 @@ module Ripple
     rake_tasks do
       load "ripple/railties/ripple.rake"
     end
-
-    initializer "ripple.configure_rails_initialization" do
-      if File.exist?(Rails.root + "config/ripple.yml")
-        Ripple.load_configuration Rails.root.join('config', 'ripple.yml'), [Rails.env]
-      end
-    end
   end
 end
