@@ -1,3 +1,3 @@
 module Ripple
-  VERSION = "2.0.0"
+  VERSION = "2.1.0"
 end
