@@ -1,8 +1,0 @@
-ripple:
-  http_port: 9000
-  host: localhost
-  
-ripple_rails:
-  development:
-    http_port: 9001
-    host: 127.0.0.1
