@@ -1,6 +1,10 @@
 require 'spec_helper'
 
 describe Ripple do
+  before do
+    Ripple.config = {}
+  end
+
   it "should have a client" do
     Ripple.client.should be_kind_of(Riak::Client)
   end
@@ -27,27 +31,6 @@ describe Ripple do
     Ripple.config = {:http_port => 9000}
     Ripple.client.should_not == c
     Ripple.client.node.http_port.should == 9000
-  end
-
-  it "should raise No Such File or Directory when given a bad configuration file" do
-    lambda { Ripple.load_config('not-here') }.should raise_error(Ripple::MissingConfiguration)
-  end
-
-  it "should pass an empty hash into configure if the configuration file is missing the key" do
-    Ripple.should_receive(:config=).with({})
-    Ripple.load_config(File.join(File.dirname(__FILE__), '..', 'fixtures', 'config.yml'), [:ripple, 'not-here'])
-  end
-
-  it "should select the configuration hash from the config keys provided" do
-    Ripple.load_config(File.join(File.dirname(__FILE__), '..', 'fixtures', 'config.yml'), ['ripple_rails', 'development'])
-    Ripple.client.node.http_port.should == 9001
-    Ripple.client.node.host.should == '127.0.0.1'
-  end
-
-  it "should apply the configuration under the ripple key" do
-    Ripple.load_config(File.join(File.dirname(__FILE__), '..', 'fixtures', 'config.yml'))
-    Ripple.client.node.http_port.should == 9000
-    Ripple.client.node.host.should == 'localhost'
   end
 
   describe "date format" do
